--- a/assets/css/templatemo-stand-blog.css
+++ b/assets/css/templatemo-stand-blog.css
@@ -60,6 +60,7 @@ h1,h2,h3,h4,h5,h6 {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-image: url(../images/apiit-banner.jpg);
+	background-color: rgba(0, 0, 0, 0.336);
 }
 
 .page-heading .text-content h4 {
@@ -338,7 +339,7 @@ header .navbar {
 
 .call-to-action .main-content {
 	padding: 40px;
-	background-image: url(../images/apiit-banner.jpg);
+	background-image: url(../images/apiit-banner.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -399,8 +400,6 @@ header .navbar {
 
 .blog-posts .down-content h4 {
 	font-size: 24px;
-	text-transform: capitalize;
-	letter-spacing: 0.5px;
 	font-weight: 900;
 	color: #20232e;
 	margin: 10px 0px 12px 0px;
